alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ video {
   height: 360px;
   display: block;
   position: relative;
-  margin: 30px;
+  margin: 20px;
   border: 5px rgb(192, 99, 193);
 }
   
@@ -126,7 +126,7 @@ video {
   height: 360px;
   display: block;
   position: relative;
-  margin: 30px;
+  margin: 20px;
   border: 5px rgb(192, 99, 193);
 } 
 
@@ -136,7 +136,7 @@ video {
 
 #cat2 {
   height: 360px;
-  margin: 30px;
+  margin: 20px;
   border: 5px rgb(192, 99, 193);
 } 
 
@@ -147,7 +147,7 @@ video {
 #cat_video {
   height: 500px;
   width: auto;
-  margin: 30px;
+  margin: 20px;
   border: 5px rgb(192, 99, 193);
 }
 
@@ -202,7 +202,7 @@ video {
   height: 400px;
   display: block;
   position: relative;
-  margin: 30px;
+  margin: 20px;
   box-shadow: 0 0 15px #d0a4f6, 0 0 25px #ac5bf2, 0 0 35px #8a18ef;
 }
 
@@ -210,7 +210,7 @@ video {
   height: 360px;
   display: block;
   position: relative;
-  margin: 30px;
+  margin: 20px;
   box-shadow: 0 0 15px #d0a4f6, 0 0 25px #ac5bf2, 0 0 35px #8a18ef;
 } 
 
@@ -246,7 +246,7 @@ video {
 #art_video {
   height: 500px;
   width: auto;
-  margin: 30px;
+  margin: 20px;
   box-shadow: 0 0 15px #d0a4f6, 0 0 25px #ac5bf2, 0 0 35px #8a18ef;
 }
 
